fix bugs. break into more components

--- a/src/components/DateSlider/DateSlider.module.css
+++ b/src/components/DateSlider/DateSlider.module.css
@@ -74,4 +74,22 @@ div.timeSliderContainer {
             }
         }
     }
+
+    button {
+        border: 1px solid transparent;
+        font-size: 1.5rem;
+        font-family: inherit;
+        background-color: #1a1a1a;
+        cursor: pointer;
+        transition: border-color 0.25s;
+        width: 40px;
+        white-space: nowrap;
+    }
+    button:hover {
+        border-color: #646cff;
+    }
+    button:focus,
+    button:focus-visible {
+        outline: 4px auto -webkit-focus-ring-color;
+    }
 }
