--- a/src/index.css
+++ b/src/index.css
@@ -41,24 +41,6 @@ h1 {
     line-height: 1.1;
 }
 
-button {
-    border: 1px solid transparent;
-    font-size: 1.5rem;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-    width: 40px;
-    white-space: nowrap;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
-
 @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
